# PandaX-4T_sdu

./: README.md
SN_database/: integ1301.data  integ1302.data  integ1303.data  integ2001.data  integ2002.data  integ2003.data  integ3001.data  integ3002.data  integ3003.data  integ5001.data  integ5002.data  integ5003.data
code1/: CMakeLists.txt  main.C
code1/exe/: graph.C  numerical_int.C
code1/include/: integral.h  quasi_FD.h  spectrum.h  xsection.h
code1/script/: fit.C
code1/src/: integral.cpp  spectrum.cpp  xsection.cpp
code1_SN/: CMakeLists.txt
code1_SN/exe/: cal_events_20s.C  graph.C  main.C  numerical_int.C
code1_SN/include/: integral.h  quasi_FD.h  spectrum.h  xsection.h
code1_SN/script/: cal_events.C  cal_events_1s.C  cal_events_20s.C  fit.C  verify.C
code1_SN/src/: .integral.cpp.kate-swp  integral.cpp  spectrum.cpp  xsection.cpp
code1_SN/src/include/: integral.h  spectrum.h  xsection.h
code2/: CMakeLists.txt
code2/include/: general.h
code2/output/: 1301_simu.root  1302_simu.root  2001_simu.root  2002_simu.root  2003_simu.root  3001_simu.root  3002_simu.root  3003_simu.root  5001_simu.root  test.root  test1.root
code2/parameters/: SN_1301.json  SN_1302.json  SN_1303.json  SN_2001.json  SN_2002.json  SN_2003.json  SN_3001.json  SN_3002.json  SN_3003.json  SN_3003_7s.json  SN_3003_test.json  SN_5001.json  SN_5002.json  SN_5003.json  parameters_p4_run1_dd_05.json  test.json
code2/src/: CMakeLists.txt  pandax-quanta.cc  signal_mc.cc  signal_mc_new.cc
code3/: CMakeLists.txt
code3/exe/: SNEW_mc.cpp  analysis.cpp  eff_hist.cpp  eff_hist_2.cpp  func_cal.cpp  plotter.cpp
code3/include/: bkg.hpp  branches.hpp  eff_far.hpp  histogram.hpp
code3/output/: 1301_result.root  1302_result.root  1303_result.root  2001_result.root  2002_result.root  3001_result.root  3002_result.root  3003_result.root  5001_result.root  5002_result.root  5003_result.root  eff.root
code3/src/: bkg.cpp  branches.cpp  eff_far.cpp  histogram.cpp
code3/src/include/: bkg.hpp  branches.hpp  eff_far.hpp
code4/: CMakeLists.txt
code4/exe/: SNmc_simu.cpp  SNmc_simu_new.cpp  SNmc_simu_old.cpp  SNmc_simu_test.cpp  analysis.cpp  far.cpp  signal_mc_new.cpp
code4/parameters/: SN_3003.json  SN_simu_para.json
code4/script/: bkg_ER.C  bkg_NR_neu.C
code4/src/: analysis.cpp  det-sim.cpp  eff_far.cpp  integral.cpp  signal_mc.cpp  spec.cpp  spectrum.cpp  xsection.cpp
code4/src/include/: analysis.hpp  det-sim.hpp  integral.hpp  pandax-quanta.h  pandax-quanta.hpp  signal_mc.hpp  spec.hpp  spectrum.hpp
code5/: CMakeLists.txt  SNmc_simu_test.cpp
code5/exe/: SNmc_simu_test.cpp  eff_hist.cpp  eff_hist_10bkg.cpp  eff_hist_1bkg.cpp  eff_hist_5bkg.cpp  eff_min.cpp  get_min.cpp
code5/parameters/: SN_3003_old.json  SN_simu_para.json
code5/script/: bkg_NR_neutron.C
code5/src/: branches.cpp  eff_far.cpp  pandax-quanta.cpp  signal_mc.cpp  spec.cpp  spectrum.cpp  xsection.cpp
code5/src/include/: eff_far.hpp  integral.hpp  signal_mc.hpp  xsection.hpp
